# stars-pines

./: ARCHITECTURE.md  AUDIT-REPORT.md  AUDIT.md  DELIVERABLES.md  PLAN.md  README.md  color-swatches.html  dashboard.html  database.rules.json  deploy-v2.sh  employee-app.html  firebase-schema.md  firebase.json  guest-entry.html  guest-portal.html  index.html  install-stars-pines.sh  menuprices.txt  ridge-bell-manifest.json  ridge-bell-staff-app.html  ridge-bell-sw.js  seed-token.html  setup.sh  stars-and-pines-dashboard.html  stars-and-pines-v3.5(1).html  stars-and-pines-v3.html  stars-and-pines-v4.html  todo
StarsPinesV2/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
StarsPinesV2/api/: __init__.py  db.py  main.py  schema.sql
StarsPinesV2/api/repositories/: cleaning.py  grievances.py  guests.py  inventory.py  ledger.py  menu.py  notifications.py  orders.py  requests.py  rooms.py  staff.py  stays.py  tokens.py
StarsPinesV2/api/routes/: __init__.py
StarsPinesV2/api/services/: billing_service.py  dashboard_service.py  guest_service.py  inventory_service.py  kitchen_service.py  occupancy_service.py  orders.py  stay_service.py
StarsPinesV2/archive/firebase-version/: firebase-config.js  guest-portal.html  index.html  ridge-bell-staff-app.html  sync-engine.js
StarsPinesV2/family-app/: index.html
StarsPinesV2/guest-entry/: index.html
StarsPinesV2/guest-portal/: index.html
StarsPinesV2/scripts/: backup.py  init_db.py  seed.py
StarsPinesV2/shared/: api.js
StarsPinesV2/tests/: conftest.py  test_e2e.py  test_phase0.py
docs/: README.md  (+7 more)
(+34 files in other folders)
